--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@stripe/stripe-js": "^4.9.0",
+    "@strapi/blocks-react-renderer": "^1.0.1",
+    "@stripe/stripe-js": "^4.10.0",
     "@types/topojson-client": "^3.1.5",
     "@types/topojson-specification": "^1.0.5",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-simple-maps": "^3.0.0",
+    "resend": "4.0.1-alpha.0",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -37,6 +39,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
