add react share

--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "lucide-react": "^0.454.0",
     "motion": "12.0.0-alpha.2",
     "next": "15.0.4",
-    "next-share": "^0.27.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
+    "react-share": "^5.1.1",
     "react-simple-maps": "^3.0.0",
     "resend": "4.0.1-alpha.0",
     "shadcn": "^2.1.6",
