--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@react-email/components": "^0.0.29",
     "@strapi/blocks-react-renderer": "^1.0.1",
