--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-email/components": "^0.0.29",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@stripe/stripe-js": "^4.10.0",
+    "@types/qs": "^6.9.17",
     "@types/topojson-client": "^3.1.5",
     "@types/topojson-specification": "^1.0.5",
     "checkbox": "^0.0.1",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.454.0",
     "motion": "12.0.0-alpha.2",
     "next": "15.0.4",
+    "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
