--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
+    "jotai": "^2.10.4",
     "lucide-react": "^0.454.0",
     "motion": "12.0.0-alpha.2",
     "next": "15.1.0",
