--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@react-email/components": "^0.0.29",
     "@strapi/blocks-react-renderer": "^1.0.1",
+    "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^4.10.0",
     "@types/qs": "^6.9.17",
     "@types/topojson-client": "^3.1.5",
