--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/types/app/(landing)/articles/page.tsx",
+    ".next/types/app/(root)/articles/page.tsx",
     "src/lib/queries/stripe"
   ],
   "exclude": [
