Prepare deploy: nextjs config, stripe mocks/aliases, build fixes

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,8 @@ EMAIL_TO=
 PRINTIFY_BASE_URL=
 PRINTIFY_SHOP_ID=
 PRINTIFY_API_TOKEN=
+
+# Square
+NEXT_PUBLIC_SQUARE_APP_ID=
+NEXT_PUBLIC_SQUARE_LOCATION_ID=
+NEXT_PUBLIC_SQUARE_PLAN_ID=
