--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,8 +25,6 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@react-email/components": "^0.0.29",
     "@strapi/blocks-react-renderer": "^1.0.1",
-    "@stripe/react-stripe-js": "^3.1.1",
-    "@stripe/stripe-js": "^4.10.0",
     "@types/qs": "^6.9.17",
     "@types/topojson-client": "^3.1.5",
     "@types/topojson-specification": "^1.0.5",
@@ -37,16 +35,15 @@
     "jotai": "^2.10.4",
     "lucide-react": "^0.454.0",
     "motion": "12.0.0-alpha.2",
-    "next": "15.1.2",
+    "next": "15.5.4",
     "qs": "^6.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.53.2",
     "react-share": "^5.1.1",
     "react-simple-maps": "^3.0.0",
     "resend": "4.0.1-alpha.0",
     "shadcn": "^2.1.6",
-    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0",
