--- a/package.json
+++ b/package.json
@@ -37,11 +37,10 @@
     "motion": "12.0.0-alpha.2",
     "next": "15.5.4",
     "qs": "^6.13.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.53.2",
     "react-share": "^5.1.1",
-    "react-simple-maps": "^3.0.0",
     "resend": "4.0.1-alpha.0",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.4",
@@ -51,6 +50,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@next/swc-wasm-nodejs": "15.5.4",
     "@strapi/types": "^5.4.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
